編集画面の作成途中

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -11,8 +11,7 @@ p{
     font-size: 30px;
 }
 
-button{
-    font-size: 15px;
-    height: 30px;
-    padding: 0 15px;
+.btn{
+    display: flex;
+    justify-content: flex-end;
 }
