--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -5,6 +5,7 @@
     justify-content: space-around;
     padding: 10px 40px;
     align-items: center;
+    width: 100%;
 }
 
 p{
@@ -13,5 +14,17 @@ p{
 
 .btn{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
+    text-decoration: none;
+}
+
+a{
+    font-size: 30px;
+    text-decoration: none;
+    color: white;
+    background-color: blue;
+    margin: 0 20px;
+    border: 3px solid white;
+    border-radius: 10px;
+    padding: 0 10px;
 }
